# zgy2sgz

./: .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml  config.sh  setup.py
zgy2sgz/: CMakeLists.txt  Makefile  main.cpp  setup.py  zgy2sgz.pyx
zgy2sgz/convert/: CMakeLists.txt  convert.cpp  convert.h  meta.cpp  meta.h  utils.h
